create github pages

--- a/2018elections.html
+++ b/2018elections.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="mbr-section content8 cid-qXdIVOVAR0" id="content8-1l">
+<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="mbr-section content8 cid-qXdIVOVAR0" id="content8-1l">
 
     
 
