--- a/elected.html
+++ b/elected.html
@@ -37,7 +37,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="mbr-section content8 cid-qX2vj42gGH" id="content8-11">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="mbr-section content8 cid-qX2vj42gGH" id="content8-11">
 
     
 
@@ -60,79 +60,79 @@
                 <div class="col-12 col-md-6 pr-lg-4 mbr-text mbr-fonts-style display-7"><p><strong>
                      National Officials</strong></p><p><strong>-------------------------------------</strong></p><p><strong>Senator Mark Warner
 </strong></p><p>
-<span style="font-size: 1rem;">475 Russell Senate Office Building&nbsp;</span></p><p><span style="font-size: 1rem;">Washington, DC 20510&nbsp;</span><br></p><p><span style="font-size: 1rem;">Phone: 202-224-2023&nbsp;</span><br></p><p><span style="font-size: 1rem;">Website: https://www.warner.senate.gov/public/&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>Senator Tim Kaine&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">475 Russell Senate Office Building&nbsp;</span></p><p><span style="font-size: 1rem;">Washington, DC 20510&nbsp;</span><br></p><p><span style="font-size: 1rem;">Phone: <a href="tel:+1-202-2242023">202-224-2023</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Website: <a href="https://www.warner.senate.gov/public/" target="_blank">https://www.warner.senate.gov/public/</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>Senator Tim Kaine&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
 <span style="font-size: 1rem;">231 Russell Senate Office Building&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Washington, D.C. 20510&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Phone: (202) 224-4024&nbsp;</span></p><p><span style="font-size: 1rem;">Website: https://www.kaine.senate.gov/&nbsp;</span><br></p><p>
+<span style="font-size: 1rem;">Phone: <a href="tel:+1-202-2244024">202-224-4024</a>&nbsp;</span></p><p><span style="font-size: 1rem;">Website: <a href="https://www.kaine.senate.gov/" target="_blank">https://www.kaine.senate.gov/</a>&nbsp;</span><br></p><p>
 <strong>Congressman Scott Taylor&nbsp;</strong></p><p>
 <span style="font-size: 1rem;">412 Cannon House Office Building&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Washington, DC 20515&nbsp;</span></p><p>
-<span style="font-size: 1rem;">DC Phone: 202-225-4215&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Local Phone 757-518-1674&nbsp;</span></p><p><span style="font-size: 1rem;">Website: https://taylor.house.gov/&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>-------------------------------------</strong>&nbsp;&nbsp;</span></p><p>
+<span style="font-size: 1rem;">DC Phone: <a href="tel:+1-202-2254215">202-225-4215</a>&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Local Phone <a href="tel:+1-757-5181674">757-518-1674</a>&nbsp;</span></p><p><span style="font-size: 1rem;">Website: <a href="https://taylor.house.gov/" target="_blank">https://taylor.house.gov/</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>-------------------------------------</strong>&nbsp;&nbsp;</span></p><p>
 <span style="font-size: 1rem;"><strong>State Officials&nbsp;</strong></span></p><p><span style="font-size: 1rem;"><strong>-------------------------------------</strong></span></p><p>
 <span style="font-size: 1rem;"><strong>Governor Ralph Northam&nbsp;</strong></span></p><p><strong>
 </strong><span style="font-size: 1rem;">P.O. Box 1475&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Richmond, VA 23218&nbsp;</span></p><p><span style="font-size: 1rem;">Phone: 804-786-2211&nbsp;</span><br></p><p><span style="font-size: 1rem;">Website: https://www.governor.virginia.gov/&nbsp;</span><br></p><p>
+<span style="font-size: 1rem;">Richmond, VA 23218&nbsp;</span></p><p><span style="font-size: 1rem;">Phone: <a href="tel:+1-804-7862211">804-786-2211</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Website: <a href="https://www.governor.virginia.gov/" target="_blank">https://www.governor.virginia.gov/</a>&nbsp;</span><br></p><p>
 <span style="font-size: 1rem;"><strong>Lt. Governor Justin Fairfax&nbsp;</strong></span></p><p>
 <span style="font-size: 1rem;">Oliver Hill Building&nbsp;</span></p><p>
 <span style="font-size: 1rem;">102 Governor Street&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Richmond, Virginia 23218&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Phone: 804-786-2078&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Phone: <a href="tel:+1-804-7862078">804-786-2078</a>&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Mailing Address:&nbsp;</span></p><p><span style="font-size: 1rem;">Office of the Lt. Governor&nbsp;</span><br></p><p>
 <span style="font-size: 1rem;">P.O. Box 1195&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Richmond, Virginia 23218&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Website: https://www.ltgov.virginia.gov/&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Website: <a href="https://www.ltgov.virginia.gov/" target="_blank">https://www.ltgov.virginia.gov/</a>&nbsp;</span></p><p>
 <span style="font-size: 1rem;"><strong>Attorney General Mark Herring&nbsp;</strong></span></p><p>
 <span style="font-size: 1rem;">Attorney General’s Office&nbsp;</span></p><p>
 <span style="font-size: 1rem;">202 North Ninth Street&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Richmond, Virginia 23219&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Phone: 804-786-2071&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Website: https://www.oag.state.va.us/&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>Senator Lynwood Lewis&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">Phone: <a href="tel:+1-804-7862071">804-786-2071</a>&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Website: <a href="https://www.oag.state.va.us/" target="_blank">https://www.oag.state.va.us/</a>&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>Senator Lynwood Lewis&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
 <span style="font-size: 1rem;">Pocahontas Building&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Room No: E609&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Senate of Virginia&nbsp;</span></p><p>
 P.&nbsp;<span style="font-size: 1rem;">O. Box 396&nbsp;</span></p><p>Richmond, VA 23218
 </p><p>
-<span style="font-size: 1rem;">Phone: (804) 698-7506&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Email: district06@senate.virginia.gov&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Phone: <a href="tel:+1-804-6987506">804-698-7506</a>&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Email: <a href="mailto:district06@senate.virginia.gov">district06@senate.virginia.gov</a>&nbsp;</span></p><p>
 <span style="font-size: 1rem;">District Office: P. O. Box 760, Accomac, VA 23301&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Local Phone: (757) 787-1094&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Website: https://apps.senate.virginia.gov/Senator/memberpage.php?id=S92&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>Delegate Robert S. Bloxom, Jr.&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
-<span style="font-size: 1rem;">Capitol Office&nbsp;</span></p><p><span style="font-size: 1rem;">General Assembly Building Room 405&nbsp;</span><br></p><p><span style="font-size: 1rem;">P.O. Box 406 Richmond, Virginia 23218&nbsp;</span><br></p><p><span style="font-size: 1rem;">Office: (804) 698-1000&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: DelRBloxom@house.virginia.gov&nbsp;</span><br></p><p><span style="font-size: 1rem;">District Office: P.O. Box 27, Mappsville, VA 23407&nbsp;</span><br></p><p>
-<span style="font-size: 1rem;">Local Phone: (757) 824-3456&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Local Phone: <a href="tel:+1-757-7871094">757-787-1094</a>&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Website: <a href="https://apps.senate.virginia.gov/Senator/memberpage.php?id=S92" target="_blank">https://apps.senate.virginia.gov/Senator/memberpage.php?id=S92</a>&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>Delegate Robert S. Bloxom, Jr.&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">Capitol Office&nbsp;</span></p><p><span style="font-size: 1rem;">General Assembly Building Room 405&nbsp;</span><br></p><p><span style="font-size: 1rem;">P.O. Box 406 Richmond, Virginia 23218&nbsp;</span><br></p><p><span style="font-size: 1rem;">Office: <a href="tel:+1-804-6981000">804-698-1000</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: <a href="mailto:DelRBloxom@house.virginia.gov">DelRBloxom@house.virginia.gov</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">District Office: P.O. Box 27, Mappsville, VA 23407&nbsp;</span><br></p><p>
+<span style="font-size: 1rem;">Local Phone: <a href="tel:+1-757-8243456">757-824-3456</a>&nbsp;</span></p><p>
 <span style="font-size: 1rem;">Congressional phone bank:&nbsp;</span></p><p>
-<span style="font-size: 1rem;">202-225-3121&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Website: http://www.robbloxom.com/</span></p><p><span style="font-size: 1rem;"><strong>--------------------------------------</strong></span></p></div>
+<span style="font-size: 1rem;"><a href="tel:+1-202-2253121">202-225-3121</a>&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Website: <a href="http://www.robbloxom.com/" target="_blank">http://www.robbloxom.com/</a></span></p><p><span style="font-size: 1rem;"><strong>--------------------------------------</strong></span></p></div>
                 <div class="col-12 col-md-6 pl-lg-4 mbr-text mbr-fonts-style display-7"><p><span style="font-size: 1rem;"><strong>Local Officials&nbsp;</strong></span></p><p><span style="font-size: 1rem;"><strong>-------------------------------------</strong></span></p><p><strong>Northampton County Supervisors
 </strong></p><p>
-<span style="font-size: 1rem;">County Info Phone: 757-678-0440&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Website: http://www.co.northampton.va.us/gov/board.html&nbsp;</span></p><p>
+<span style="font-size: 1rem;">County Info Phone: <a href="tel:+1-757-6780440">757-678-0440</a>&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Website: <a href="http://www.co.northampton.va.us/gov/board.html" target="_blank">http://www.co.northampton.va.us/gov/board.html</a>&nbsp;</span></p><p>
 <span style="font-size: 1rem;"><strong>District 1: &nbsp;John Coker&nbsp;</strong></span></p><p>
-<span style="font-size: 1rem;">Email: jcoker@co.northampton.va.us&nbsp;</span></p><p><strong>
+<span style="font-size: 1rem;">Email: <a href="mailto:jcoker@co.northampton.va.us">jcoker@co.northampton.va.us</a>&nbsp;</span></p><p><strong>
 <span style="font-size: 1rem;">District 2: &nbsp;David Fauber&nbsp;</span></strong></p><p>
-<span style="font-size: 1rem;">Email: dfauber@co.northampton.va.us&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Email: <a href="mailto:dfauber@co.northampton.va.us">dfauber@co.northampton.va.us</a>&nbsp;</span></p><p>
 <span style="font-size: 1rem;"><strong>District 3: &nbsp;Oliver H. Bennett</strong>&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Email: obennett@co.northampton.va.us&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>District 4: &nbsp;H. Spencer Murray</strong>&nbsp;</span><br><span style="font-size: 1rem;"></span></p><p>
-<span style="font-size: 1rem;">Email: smurray@co.northampton.va.us&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>District 5: &nbsp;Robert Duer</strong>&nbsp;</span><br><span style="font-size: 1rem;"></span></p><p>
-<span style="font-size: 1rem;">rduer@co.northampton.va.us&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Email: <a href="mailto:obennett@co.northampton.va.us">obennett@co.northampton.va.us</a>&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>District 4: &nbsp;H. Spencer Murray</strong>&nbsp;</span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">Email: <a href="mailto:smurray@co.northampton.va.us">smurray@co.northampton.va.us</a>&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>District 5: &nbsp;Robert Duer</strong>&nbsp;</span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">Email: <a href="mailto:rduer@co.northampton.va.us">rduer@co.northampton.va.us</a>&nbsp;</span></p><p>
 <strong>-------------------------------------</strong></p><p>&nbsp;
 <span style="font-size: 1rem;"><strong>Accomack County Supervisors&nbsp;</strong></span></p><p>
-<span style="font-size: 1rem;">County Info Phone: 757-787-5700&nbsp;</span></p><p><span style="font-size: 1rem;">Website: https://www.co.accomack.va.us/government/board-of-supervisors&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>District 1: &nbsp;William J. “Billy” Tarr&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
-<span style="font-size: 1rem;">7079 Wayne Road, Chincoteague, VA 23336&nbsp;</span></p><p><span style="font-size: 1rem;">Home: (757) 336-2940&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: btarr@co.accomack.va.us&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>District 2: &nbsp;Ron S. Wolff&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
-<span style="font-size: 1rem;">P.O. Box 41, Atlantic, VA 23303&nbsp;</span></p><p><span style="font-size: 1rem;">Home: (757) 824-0383&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: rwolff@co.accomack.va.us&nbsp;</span><br></p><p><strong>
+<span style="font-size: 1rem;">County Info Phone: <a href="tel:+1-757-7875700">757-787-5700</a>&nbsp;</span></p><p><span style="font-size: 1rem;">Website: <a href="https://www.co.accomack.va.us/government/board-of-supervisors" target="_blank">https://www.co.accomack.va.us/government/board-of-supervisors</a>&nbsp;</span></p><p><span style="font-size: 1rem;"><strong>District 1: &nbsp;William J. “Billy” Tarr&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">7079 Wayne Road, Chincoteague, VA 23336&nbsp;</span></p><p><span style="font-size: 1rem;">Home: <a href="tel:+1-757-3362940">757-336-2940</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: <a href="mailto:btarr@co.accomack.va.us">btarr@co.accomack.va.us</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>District 2: &nbsp;Ron S. Wolff&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">P.O. Box 41, Atlantic, VA 23303&nbsp;</span></p><p><span style="font-size: 1rem;">Home: <a href="tel:+1-757-8240383">757-824-0383</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: <a href="mailto:rwolff@co.accomack.va.us">rwolff@co.accomack.va.us</a>&nbsp;</span><br></p><p><strong>
 <span style="font-size: 1rem;">District 3: &nbsp;Grayson C. Chesser&nbsp;</span></strong></p><p>
 <span style="font-size: 1rem;">P.O. Box 12, Sanford, VA 23426&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Home: 757-824-3566&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Office: 757-824-9666&nbsp;</span></p><p><strong>
+<span style="font-size: 1rem;">Home: <a href="tel:+1-757-8243566">757-824-3566</a>&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Office: <a href="tel:+1-757-8249666">757-824-9666</a>&nbsp;</span></p><p><strong>
 <span style="font-size: 1rem;">District 4: &nbsp;Paul E. J. Muhly&nbsp;</span></strong></p><p>
 <span style="font-size: 1rem;">18174 Hopeton Road, Parksley, VA 23421&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Home: (757) 665-7310&nbsp;</span></p><p>
-<span style="font-size: 1rem;">Email: pmuhly@co.accomack.va.us&nbsp;</span></p><p><strong>
+<span style="font-size: 1rem;">Home: <a href="tel:+1-757-6657310">757-665-7310</a>&nbsp;</span></p><p>
+<span style="font-size: 1rem;">Email: <a href="mailto:pmuhly@co.accomack.va.us">pmuhly@co.accomack.va.us</a>&nbsp;</span></p><p><strong>
 <span style="font-size: 1rem;">District 5: &nbsp;Harrison W. Phillips, III&nbsp;</span></strong></p><p>
-<span style="font-size: 1rem;">17028 Kegotank Road, Bloxom, VA 23308&nbsp;</span></p><p><span style="font-size: 1rem;">Home: (757) 665-5049&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: hphillips@co.accomack.va.us&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>District 6: &nbsp;Robert Crockett, Chair&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
-<span style="font-size: 1rem;">19130 Greenway Circle, Onancock, VA 23417&nbsp;</span></p><p><span style="font-size: 1rem;">Home: (757) 787-1881&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email:rcrockett@co.accomack.va.us&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>District 7: &nbsp;Laura Belle Gordy, Vice Chair&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
-<span style="font-size: 1rem;">P.O. Box 253, Onley, VA 23418&nbsp;</span></p><p><span style="font-size: 1rem;">Home: (757) 787-2908&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: lbgordy@co.accomack.va.us&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>District 8: &nbsp;Donald L. Hart Jr.&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
-<span style="font-size: 1rem;">P.O. Box 100, Keller, VA 23401&nbsp;</span></p><p><span style="font-size: 1rem;">Home: (757) 787-7166&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: dhart@co.accomack.va.us</span></p><p><span style="font-size: 1rem;"><strong>--------------------------------------<br></strong></span><br></p></div>
+<span style="font-size: 1rem;">17028 Kegotank Road, Bloxom, VA 23308&nbsp;</span></p><p><span style="font-size: 1rem;">Home: <a href="tel:+1-757-6655049">757-665-5049</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: <a href="mailto:hphillips@co.accomack.va.us">hphillips@co.accomack.va.us</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>District 6: &nbsp;Robert Crockett, Chair&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">19130 Greenway Circle, Onancock, VA 23417&nbsp;</span></p><p><span style="font-size: 1rem;">Home: <a href="tel:+1-757-7871881">757-787-1881</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: <a href="mailto:rcrockett@co.accomack.va.us">rcrockett@co.accomack.va.us</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>District 7: &nbsp;Laura Belle Gordy, Vice Chair&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">P.O. Box 253, Onley, VA 23418&nbsp;</span></p><p><span style="font-size: 1rem;">Home: <a href="tel:+1-757-7872908">757-787-2908</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: <a href="mailto:lbgordy@co.accomack.va.us">lbgordy@co.accomack.va.us</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>District 8: &nbsp;Donald L. Hart Jr.&nbsp;</strong></span><br><span style="font-size: 1rem;"></span></p><p>
+<span style="font-size: 1rem;">P.O. Box 100, Keller, VA 23401&nbsp;</span></p><p><span style="font-size: 1rem;">Home: <a href="tel:+1-757-7877166">757-787-7166</a>&nbsp;</span><br></p><p><span style="font-size: 1rem;">Email: <a href="mailto:dhart@co.accomack.va.us">dhart@co.accomack.va.us</a></span></p><p><span style="font-size: 1rem;"><strong>--------------------------------------<br></strong></span><br></p></div>
             </div>
         </div>
     </div>
