create github pages

--- a/page5.html
+++ b/page5.html
@@ -37,7 +37,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">bootstrap theme</a></section><section class="mbr-section content8 cid-qXjNkAuqfb" id="content8-1n">
+<section class="engine"><a href="https://mobiri.se/s">bootstrap themes</a></section><section class="mbr-section content8 cid-qXjNkAuqfb" id="content8-1n">
 
     
 
@@ -56,7 +56,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5"><p><strong>National Links</strong></p></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5">National Links</div>
         </div>
     </div>
 </section>
@@ -67,32 +67,32 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><div><strong>Democratic National Committee (DNC)
-</strong></div><div><strong>Website: <a href="https://www.democrats.org/" target="_blank">https://www.democrats.org/</a>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><div>Democratic National Committee (DNC)
+</div><div>Website:<strong> <a href="https://www.democrats.org/" target="_blank">https://www.democrats.org/</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Young Democrats of America
-</strong></div><div><strong>Website: <a href="https://www.yda.org/" target="_blank">https://www.yda.org/
+</strong></div><div><strong><br></strong></div><div>Young Democrats of America
+</div><div>Website:<strong> <a href="https://www.yda.org/" target="_blank">https://www.yda.org/
 </a></strong></div><div><strong>
-</strong></div><div><strong>Indivisible
-</strong></div><div><strong>Website: <a href="https://www.indivisible.org/" target="_blank">https://www.indivisible.org/</a>
+</strong></div><div><strong><br></strong></div><div>Indivisible
+</div><div>Website:<strong> <a href="https://www.indivisible.org/" target="_blank">https://www.indivisible.org/</a>
 </strong></div><div><strong>
-</strong></div><div><strong>The Resistance Party
-</strong></div><div><strong>Website: <a href="https://www.theresistanceparty.org/" target="_blank">https://www.theresistanceparty.org/
+</strong></div><div><strong><br></strong></div><div>The Resistance Party
+</div><div>Website:<strong> <a href="https://www.theresistanceparty.org/" target="_blank">https://www.theresistanceparty.org/
 </a></strong></div><div><strong>
-</strong></div><div><strong>Black Lives Matter
-</strong></div><div><strong>Website: <a href="https://blacklivesmatter.com/" target="_blank">https://blacklivesmatter.com/</a>
+</strong></div><div><strong><br></strong></div><div>Black Lives Matter
+</div><div>Website: <a href="https://blacklivesmatter.com/" target="_blank" style="font-weight: bold;">https://blacklivesmatter.com/</a>
+</div><div><strong>
+</strong></div><div><strong><br></strong></div><div>GovTrack - Research and track legislation in the United States Congress, including Members of Congress, bills and resolutions, voting records, committee activity and maps of their Congressional Districts.
+</div><div>Website:<strong> <a href="https://www.govtrack.us/start" target="_blank">https://www.govtrack.us/start</a>
 </strong></div><div><strong>
-</strong></div><div><strong>GovTrack - Research and track legislation in the United States Congress, including Members of Congress, bills and resolutions, voting records, committee activity and maps of their Congressional Districts.
-</strong></div><div><strong>Website: <a href="https://www.govtrack.us/start" target="_blank">https://www.govtrack.us/start</a>
-</strong></div><div><strong>
-</strong></div><div><strong>Contact Lists for Elected Officials from All 50 States
-</strong></div><div><strong>Website: <a href="https://thepeoplegov.org/" target="_blank">https://thepeoplegov.org/
+</strong></div><div><strong><br></strong></div><div>Contact Lists for Elected Officials from All 50 States
+</div><div>Website:<strong> <a href="https://thepeoplegov.org/" target="_blank">https://thepeoplegov.org/
 </a></strong></div><div><strong>
-</strong></div><div><strong>U.S. Senate 115th Congress Committee Assignments
-</strong></div><div><strong>Website: <a href="https://www.senate.gov/general/committee_assignments/assignments.htm" target="_blank">https://www.senate.gov/general/committee_assignments/assignments.htm</a>
+</strong></div><div><strong><br></strong></div><div>U.S. Senate 115th Congress Committee Assignments
+</div><div>Website:<strong> <a href="https://www.senate.gov/general/committee_assignments/assignments.htm" target="_blank">https://www.senate.gov/general/committee_assignments/assignments.htm</a>
 </strong></div><div><strong>
-</strong></div><div><strong>U.S. House of Representatives 115th Congress Committee Assignments
-</strong></div><div><strong>Website: <a href="https://www.house.gov/representatives" target="_blank">https://www.house.gov/representatives
+</strong></div><div><strong><br></strong></div><div>U.S. House of Representatives 115th Congress Committee Assignments
+</div><div>Website:<strong> <a href="https://www.house.gov/representatives" target="_blank">https://www.house.gov/representatives
 </a></strong></div></div>
         </div>
     </div>
@@ -104,7 +104,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5"><strong>State Links</strong></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5">State Links</div>
         </div>
     </div>
 </section>
@@ -115,58 +115,54 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><div><strong>Virginia Department of Elections&nbsp;</strong><br></div><div><strong>Website: <a href="https://www.elections.virginia.gov/" target="_blank">https://www.elections.virginia.gov/
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><div><span style="font-size: 1rem;">Virginia Department of Elections&nbsp;</span><br></div><div>Website:<strong> <a href="https://www.elections.virginia.gov/" target="_blank">https://www.elections.virginia.gov/
 </a></strong></div><div><strong>
-</strong></div><div><strong>Virginia GovTrack - Research and track legislation for Virginia's Members of Congress and their bills and resolutions, voting records, committee activity and maps of their Congressional Districts.
-</strong></div><div><strong>Website: <a href="https://www.govtrack.us/congress/members/VA" target="_blank">https://www.govtrack.us/congress/members/VA
+</strong></div><div><strong><br></strong></div><div>Virginia GovTrack - Research and track legislation for Virginia's Members of Congress and their bills and resolutions, voting records, committee activity and maps of their Congressional Districts.
+</div><div>Website:<strong> <a href="https://www.govtrack.us/congress/members/VA" target="_blank">https://www.govtrack.us/congress/members/VA
 </a></strong></div><div><strong>
-</strong></div><div><strong>Contact List for All Elected Officials in State of Virginia
-</strong></div><div><strong>Website: <a href="https://thepeoplegov.org/state/virginia" target="_blank">https://thepeoplegov.org/state/virginia
+</strong></div><div><strong><br></strong></div><div>Contact List for All Elected Officials in State of Virginia
+</div><div>Website:<strong> <a href="https://thepeoplegov.org/state/virginia" target="_blank">https://thepeoplegov.org/state/virginia
 </a></strong></div><div><strong>
-</strong></div><div><strong>Democratic Party of Virginia
-</strong></div><div><strong>Website: <a href="http://vademocrats.org/" target="_blank">http://vademocrats.org/
+</strong></div><div><strong><br></strong></div><div>Democratic Party of Virginia
+</div><div>Website:<strong> <a href="http://vademocrats.org/" target="_blank">http://vademocrats.org/
 </a></strong></div><div><strong>
-</strong></div><div><strong>Virginia Beach Democrats
-</strong></div><div><strong>Website: <a href="https://vbdemocrats.org/" target="_blank">https://vbdemocrats.org/
+</strong></div><div><strong><br></strong></div><div>Virginia Beach Democrats
+</div><div>Website:<strong> <a href="https://vbdemocrats.org/" target="_blank">https://vbdemocrats.org/
 </a></strong></div><div><strong>
-</strong></div><div><strong>Norfolk Democrats
-</strong></div><div><strong>Website: <a href="http://www.norfolkdemocrats.org/" target="_blank">http://www.norfolkdemocrats.org/
+</strong></div><div><strong><br></strong></div><div>Norfolk Democrats
+</div><div>Website:<strong> <a href="http://www.norfolkdemocrats.org/" target="_blank">http://www.norfolkdemocrats.org/
 </a></strong></div><div><strong>
-</strong></div><div><strong>Blue Virginia
-</strong></div><div><strong>Website: <a href="http://bluevirginia.us/" target="_blank">http://bluevirginia.us/
+</strong></div><div><strong><br></strong></div><div>Blue Virginia
+</div><div>Website:<strong> <a href="http://bluevirginia.us/" target="_blank">http://bluevirginia.us/
 </a></strong></div><div><strong>
-</strong></div><div><strong>Indivisible 757
-</strong></div><div><strong>Facebook: <a href="https://www.facebook.com/groups/1810355395891064/" target="_blank">https://www.facebook.com/groups/1810355395891064/</a>
+</strong></div><div><strong><br></strong></div><div>Indivisible 757
+</div><div>Facebook:<strong> <a href="https://www.facebook.com/groups/1810355395891064/" target="_blank">https://www.facebook.com/groups/1810355395891064/</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Motherboard
-</strong></div><div><strong>Website: <a href="https://motherboard757.com/" target="_blank">https://motherboard757.com/</a>
+</strong></div><div><strong><br></strong></div><div>Motherboard
+</div><div>Website: <a href="https://motherboard757.com/" target="_blank">https://sites.google.com/site/esvadems/home</a>
+</div><div><strong>
+</strong></div><div><strong><br></strong></div><div>Progressive Democrats of America (Hampton Roads)
+</div><div>Fecebook:<strong> <a href="https://www.facebook.com/pg/PDAofHRandES" target="_blank">https://www.facebook.com/pg/PDAofHRandES</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Progressive Democrats of America (Hampton Roads)
-</strong></div><div><strong>Fecebook: <a href="https://www.facebook.com/pg/PDAofHRandES" target="_blank">https://www.facebook.com/pg/PDAofHRandES</a>
+</strong></div><div><strong><br></strong></div><div>Virginia Young Democrats
+</div><div>Website:<strong> <a href="http://www.vayd.org/" target="_blank">http://www.vayd.org/</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Virginia Young Democrats
-</strong></div><div><strong>Website: <a href="http://www.vayd.org/" target="_blank">http://www.vayd.org/</a>
-</strong></div><div><strong>
-</strong></div><div><strong>Norfolk Democrats
-</strong></div><div><strong>Website: <a href="http://www.norfolkdemocrats.org/" target="_blank">http://www.norfolkdemocrats.org/</a>
-</strong></div><div><strong>
-</strong></div><div><strong>Black Lives Matter 757
-</strong></div><div><strong>Facebook: <a href="https://www.facebook.com/BlackLivesMatter757/" target="_blank">https://www.facebook.com/BlackLivesMatter757/
+</strong></div><div><strong><br></strong></div><div><span style="font-size: 1rem;">Black Lives Matter 757</span><br></div><div>Facebook:<strong> <a href="https://www.facebook.com/BlackLivesMatter757/" target="_blank">https://www.facebook.com/BlackLivesMatter757/
 </a></strong></div><div><strong>
-</strong></div><div><strong>OneVirginia2021
-</strong></div><div><strong>Website: <a href="https://www.onevirginia2021.org/" target="_blank">https://www.onevirginia2021.org/</a>
+</strong></div><div><strong><br></strong></div><div>OneVirginia2021
+</div><div>Website:<strong> <a href="https://www.onevirginia2021.org/" target="_blank">https://www.onevirginia2021.org/</a>
 </strong></div><div><strong>
-</strong></div><div><strong>LGBT Democrats of Virginia
-</strong></div><div><strong>Website: <a href="https://lgbtvadem.org/" target="_blank">https://lgbtvadem.org/
+</strong></div><div><strong><br></strong></div><div>LGBT Democrats of Virginia
+</div><div>Website:<strong> <a href="https://lgbtvadem.org/" target="_blank">https://lgbtvadem.org/
 </a></strong></div><div><strong>
-</strong></div><div><strong>Hampton Roads Grassroots Progressive Coalition
-</strong></div><div><strong>Facebook: <a href="https://www.facebook.com/pg/HRGrassrootsCoalition" target="_blank">https://www.facebook.com/pg/HRGrassrootsCoalition</a>
+</strong></div><div><strong><br></strong></div><div>Hampton Roads Grassroots Progressive Coalition
+</div><div>Facebook:<strong> <a href="https://www.facebook.com/pg/HRGrassrootsCoalition" target="_blank">https://www.facebook.com/pg/HRGrassrootsCoalition</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Moms Demand Action
-</strong></div><div><strong>Website: <a href="https://momsdemandaction.org/" target="_blank">https://momsdemandaction.org/</a>
+</strong></div><div><strong><br></strong></div><div>Moms Demand Action
+</div><div>Website:<strong> <a href="https://momsdemandaction.org/" target="_blank">https://momsdemandaction.org/</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Virginia Berniecrats
-</strong></div><div><strong>Facebook: <a href="https://www.facebook.com/Virginia-Berniecrats-1981796521862083/" target="_blank">https://www.facebook.com/Virginia-Berniecrats-1981796521862083/</a>
+</strong></div><div><strong><br></strong></div><div>Virginia Berniecrats
+</div><div>Facebook:<strong> <a href="https://www.facebook.com/Virginia-Berniecrats-1981796521862083/" target="_blank">https://www.facebook.com/Virginia-Berniecrats-1981796521862083/</a>
 </strong></div></div>
         </div>
     </div>
@@ -178,7 +174,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5"><strong>Local Links</strong></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5">Local Links</div>
         </div>
     </div>
 </section>
@@ -189,28 +185,28 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><div><strong>Eastern Shore Democratic Committees&nbsp;</strong><br></div><div><strong>Website: <a href="https://sites.google.com/site/esvadems/home" target="_blank">https://sites.google.com/site/esvadems/home
-</a></strong></div><div><strong><a href="https://sites.google.com/site/esvadems/home" target="_blank">
-</a></strong></div><div><strong>Indivisible ESVA
-</strong></div><div><strong>Beth Calder
-</strong></div><div><strong>Email: <a href="mailto:bethlcalder@gmail.com">bethlcalder@gmail.com</a>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><div><span style="font-size: 1rem;">Eastern Shore Democratic Committees&nbsp;</span><br></div><div>Website: <a href="https://sites.google.com/site/esvadems/home" target="_blank">https://sites.google.com/site/esvadems/home
+</a></div><div><strong><a href="https://sites.google.com/site/esvadems/home" target="_blank">
+</a></strong></div><div><strong><br></strong></div><div>Indivisible ESVA
+</div><div>Beth Calder
+</div><div>Email:<strong> <a href="mailto:bethlcalder@gmail.com">bethlcalder@gmail.com</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Chincoteague Keep In Touch Democrats (KITD)
-</strong></div><div><strong>Louisa Flaningam 
-</strong></div><div><strong>Email: <a href="mailto:PJandLouisa@verizon.net">PJandLouisa@verizon.net</a>
+</strong></div><div><strong><br></strong></div><div>Chincoteague Keep In Touch Democrats (KITD)
+</div><div>Louisa Flaningam 
+</div><div>Email:<strong> <a href="mailto:PJandLouisa@verizon.net">PJandLouisa@verizon.net</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Onancock Drinking Liberally
-</strong></div><div><strong>Terry Malarkey
-</strong></div><div><strong>Next: Charlotte Hotel, 7 North St., Onancock on Wed., July 11, 2018 @ 7 pm
-</strong></div><div><strong>Blog: <a href="http://livingliberally.org/chapter/blog/69557" target="_blank">http://livingliberally.org/chapter/blog/69557</a>
+</strong></div><div><strong><br></strong></div><div>Onancock Drinking Liberally
+</div><div>Terry Malarkey
+</div><div>Next: Charlotte Hotel, 7 North St., Onancock on Wed., July 11, 2018 @ 7 pm
+</div><div>Blog:<strong> <a href="http://livingliberally.org/chapter/blog/69557" target="_blank">http://livingliberally.org/chapter/blog/69557</a>
 </strong></div><div><strong>
-</strong></div><div><strong>Accomack County NAACP 7041
-</strong></div><div><strong>Facebiik: https://www.facebook.com/AcckNAACP/
+</strong></div><div><strong><br></strong></div><div>Accomack County NAACP 7041
+</div><div>Facebook: <a href="https://www.facebook.com/AcckNAACP/" target="_blank">https://www.facebook.com/AcckNAACP/</a>
+</div><div><strong>
 </strong></div><div><strong>
-</strong></div><div><strong>
-</strong></div><div><strong>Northampton County NAACP
-</strong></div><div><strong>Jane Cabarrus
-</strong></div><div><strong>Email: <a href="mailto:janecabarrus@aol.com">janecabarrus@aol.com</a>
+</strong></div><div><strong><br></strong></div><div>Northampton County NAACP
+</div><div>Jane Cabarrus
+</div><div>Email:<strong> <a href="mailto:janecabarrus@aol.com">janecabarrus@aol.com</a>
 </strong></div><div><strong><br></strong></div></div>
         </div>
     </div>
